<resources>
  <string name="app_name">佰倡互动</string>

  <!--APP-->
  <string name="str_interaction">圈子</string>
  <string name="str_me">我的</string>
  <string name="str_interaction_detail">详情</string>
  <string name="btn_interaction_report">举报</string>
  <string name="tips_report">回复</string>
  <string name="btn_send">发送</string>
  <string name="btn_cancel">取消</string>
  <string name="btn_see_more">查看更多回复</string>
  <string name="btn_publish">发布</string>
  <string name="str_publish_interaction">发表互动</string>
  <string name="tips_title">标题</string>
  <string name="tips_write_some">说点什么吧…</string>
  <string name="btn_interaction_model">板块</string>
  <string name="str_interaction_info_dynamic">动态</string>
  <string name="str_interaction_info_report">回复</string>
  <string name="str_interaction_info_collect">收藏</string>
  <string name="str_interaction_business">商家详情</string>
  <string name="str_select">%1$s/%2$s</string>
  <string name="btn_comment">评论</string>
  <string name="button_cancel_collect">取消收藏</string>
  <string name="button_delete">删除</string>
  <string name="button_select_cancel">取消</string>
  <string name="button_select_image">相册</string>
  <string name="button_select_take">拍照</string>
  <string name="button_select_video">小视频</string>



  <string name="N_A">N/A</string>
  <string name="close">Close</string>
  <string name="exit">Exit</string>
  <string name="sample">Sample</string>
  <string name="recent">Recent</string>
  <string name="settings">Settings</string>
  <string name="tracks">Tracks</string>
  <string name="toggle_player">Player</string>
  <string name="toggle_render">Render</string>
  <string name="toggle_ratio">Scale</string>
  <string name="show_info">Info</string>
  <string name="vdec">vdec</string>
  <string name="fps">fps</string>
  <string name="v_cache">v-cache</string>
  <string name="a_cache">a-cache</string>
  <string name="load_cost">load-cost</string>
  <string name="seek_cost">seek_cost</string>
  <string name="seek_load_cost">seek_load_cost</string>
  <string name="tcp_speed">tcp_speed</string>
  <string name="bit_rate">bit_rate</string>

  <string name="media_information">Media Information</string>
  <string name="mi_player">Player</string>
  <string name="mi_media">Media</string>
  <string name="mi_profile_level">Profile level</string>
  <string name="mi_pixel_format">Pixel format</string>
  <string name="mi_resolution">Resolution</string>
  <string name="mi_length">Length</string>
  <string name="mi_stream_fmt1">Stream #%d</string>
  <string name="mi_type">Type</string>
  <string name="mi_language">Language</string>
  <string name="mi_codec">Codec</string>
  <string name="mi_frame_rate">Frame rate</string>
  <string name="mi_bit_rate">Bit rate</string>
  <string name="mi_sample_rate">Sample rate</string>
  <string name="mi_channels">Channels</string>
  <string name="mi__selected_video_track">*</string>
  <string name="mi__selected_audio_track">*</string>
  <string name="mi__selected_subtitle_track">*</string>

  <string name="TrackType_video">Video</string>
  <string name="TrackType_audio">Audio</string>
  <string name="TrackType_subtitle">Subtitle</string>
  <string name="TrackType_timedtext">Timed text</string>
  <string name="TrackType_metadata">Meta data</string>
  <string name="TrackType_unknown">Unknown</string>

  <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
  <string name="VideoView_error_text_unknown">Unknown</string>
  <string name="VideoView_error_button">OK</string>

  <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
  <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
  <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
  <string name="VideoView_ar_match_parent">Free / Fill parent</string>
  <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
  <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

  <string name="VideoView_render_none">Render: None</string>
  <string name="VideoView_render_surface_view">Render: SurfaceView</string>
  <string name="VideoView_render_texture_view">Render: TextureView</string>

  <string name="VideoView_player_none">Player: None</string>
  <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
  <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
  <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

</resources>
