<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/interaction_layout_background"
   android:fitsSystemWindows="true"
   android:orientation="vertical"
   tools:context="com.baichang.android.circle.InteractionPublishActivity">

   <RelativeLayout
      android:id="@+id/title"
      style="@style/top_bar_layout"
      android:background="@color/interaction_top_title_color">

      <ImageButton
         android:id="@+id/back"
         style="@style/top_bar_btn_left"
         android:src="@drawable/interaction_ic_back" />

      <TextView
         android:id="@+id/interaction_publish_tv_title"
         style="@style/interaction_top_bar_title"
         android:text="@string/str_publish_interaction"
         android:textColor="@color/cm_tv_black1" />

      <TextView
         android:id="@+id/interaction_publish_tv_publish"
         style="@style/interaction_top_bar_tv_right"
         android:text="@string/btn_publish"
         android:textColor="@color/interaction_text_font" />

   </RelativeLayout>

   <android.support.v4.widget.ContentLoadingProgressBar
      android:id="@+id/interaction_publish_progress"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:visibility="gone" />

   <EditText
      android:id="@+id/interaction_publish_et_title"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:background="@drawable/interaction_publish_et_title_bg"
      android:hint="@string/tips_title"
      android:textColor="@color/cm_tv_black1"
      android:textSize="@dimen/cm_tv_size_body13" />

   <EditText
      android:id="@+id/interaction_publish_et_content"
      android:layout_width="match_parent"
      android:layout_height="110dp"
      android:padding="10dp"
      android:background="@drawable/interaction_publish_et_bg"
      android:gravity="start"
      android:hint="@string/tips_write_some"
      android:textColor="@color/cm_tv_black1"
      android:textSize="@dimen/cm_tv_size_body13" />

   <android.support.v7.widget.RecyclerView
      android:id="@+id/interaction_publish_rv_images"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:background="@android:color/white"
      android:overScrollMode="never"
      app:layoutManager="GridLayoutManager"
      app:spanCount="4" />

   <TextView
      android:id="@+id/interaction_publish_tv_model"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_marginTop="10dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:background="@drawable/interaction_publish_et_bg"
      android:drawableRight="@drawable/interaction_ic_arrow_right"
      android:gravity="center_vertical"
      android:text="@string/btn_interaction_model"
      android:textColor="@color/cm_tv_black1"
      android:textSize="@dimen/cm_tv_size_body2" />
</LinearLayout>
