<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/interaction_layout_background"
   android:fitsSystemWindows="true"
   tools:context="com.baichang.android.circle.InteractionDetailActivity">

   <RelativeLayout
      android:id="@+id/title"
      style="@style/top_bar_layout"
      android:background="@color/interaction_top_title_color">

      <ImageButton
         android:id="@+id/back"
         style="@style/top_bar_btn_left"
         android:onClick="back"
         android:src="@drawable/interaction_ic_back" />

      <TextView
         android:id="@+id/interaction_top_tv_title"
         style="@style/interaction_top_bar_title"
         android:text="@string/str_interaction_detail"
         android:textColor="@color/cm_tv_black1" />

      <ImageButton
         android:id="@+id/interaction_detail_btn_share"
         style="@style/top_bar_btn_right"
         android:src="@drawable/interaction_ic_share" />

      <ImageButton
         android:id="@+id/interaction_detail_btn_collect"
         style="@style/top_bar_btn_right"
         android:layout_alignParentRight="false"
         android:layout_toLeftOf="@id/interaction_detail_btn_share"
         android:src="@drawable/interaction_ic_collect" />
   </RelativeLayout>

   <android.support.v4.widget.SwipeRefreshLayout
      android:id="@+id/interaction_detail_refresh"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title">

      <android.support.v7.widget.RecyclerView
         android:id="@+id/interaction_detail_rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingBottom="46dp"
         android:clipToPadding="false"
         app:layoutManager="LinearLayoutManager" />
   </android.support.v4.widget.SwipeRefreshLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:background="@drawable/interaction_detail_report_layout_bg"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <ImageButton
         android:id="@+id/interaction_detail_iv_praise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/interaction_detail_praise_btn_bg"
         android:src="@drawable/interaction_ic_praise" />

      <EditText
         android:id="@+id/interaction_me_reply_et_report"
         android:layout_width="0dp"
         android:layout_height="28dp"
         android:layout_weight="1"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:background="@drawable/interaction_detail_report_btn_bg"
         android:hint="@string/tips_report"
         android:textCursorDrawable="@drawable/interaction_edit_cursor_color"
         android:textSize="@dimen/cm_tv_size_body12" />

      <TextView
         android:id="@+id/interaction_me_reply_tv_send"
         android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:background="@drawable/interaction_detail_report_btn_bg"
         android:gravity="center"
         android:text="@string/btn_send"
         android:textColor="@color/cm_tv_black2"
         android:textSize="@dimen/cm_tv_size_body12" />
   </LinearLayout>
</RelativeLayout>
